// Copyright Â© 2017-2018 Stratumn SAS
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "github.com/stratumn/go-indigonode/cli/grpc/ext/ext.proto";
import "github.com/stratumn/go-indigonode/app/storage/pb/storage.proto";

package stratumn.indigonode.app.storage.grpc;

option go_package = "github.com/stratumn/go-indigonode/app/storage/grpc;grpc";

// The storage service definition.
service Storage {
  
  // Upload a file to the Indigo node.
  rpc Upload (stream stratumn.indigonode.app.storage.FileChunk) returns (UploadAck) {}

  // Sends a request to the server to start a new upload.
  rpc StartUpload(UploadReq) returns (UploadSession) {}

  // Upload a single chunk of a file to the server.
  rpc UploadChunk(SessionFileChunk) returns (Ack) {}

  // Notifies the server that the session's file has been entirely sent.
  rpc EndUpload(UploadSession) returns (UploadAck) {}
  
  // Give peers access to a file.
  rpc AuthorizePeers (AuthRequest) returns (Ack) {}

  // Download downloads a file from a peer.
  rpc Download (DownloadRequest) returns (stream stratumn.indigonode.app.storage.FileChunk) {}
}

message SessionFileChunk {
  // file name is required only on first message.
  bytes id = 1 [
    (stratumn.indigonode.cli.ext.field_desc) = "Id of the upload session",
    (stratumn.indigonode.cli.ext.field_required) = true
  ];
  bytes data = 2 [
    (stratumn.indigonode.cli.ext.field_desc) = "Bytes of one file chunk",
    (stratumn.indigonode.cli.ext.field_required) = true
  ];
}

message UploadReq {
  string file_name = 1 [
    (stratumn.indigonode.cli.ext.field_desc) = "Name of the file",
    (stratumn.indigonode.cli.ext.field_required) = true
  ];
}

message UploadSession {
  bytes id = 1 [
    (stratumn.indigonode.cli.ext.field_desc) = "Id of the upload session",
    (stratumn.indigonode.cli.ext.field_required) = true
  ];
}

message AuthRequest {
  repeated bytes peer_ids = 1 [
    (stratumn.indigonode.cli.ext.field_desc) = "Peer IDs",
    (stratumn.indigonode.cli.ext.field_required) = true,
    (stratumn.indigonode.cli.ext.field_base58) = true
  ];
  bytes file_hash = 2 [
    (stratumn.indigonode.cli.ext.field_desc) = "Hash of the file",
    (stratumn.indigonode.cli.ext.field_required) = true
  ];
}

message DownloadRequest {
  bytes peer_id = 1 [
    (stratumn.indigonode.cli.ext.field_desc) = "Peer ID",
    (stratumn.indigonode.cli.ext.field_required) = true,
    (stratumn.indigonode.cli.ext.field_base58) = true
  ];
  bytes file_hash = 2 [
    (stratumn.indigonode.cli.ext.field_desc) = "Hash of the file",
    (stratumn.indigonode.cli.ext.field_required) = true
  ];
}

// An empty ack.
message Ack {
}

message UploadAck {
  bytes file_hash = 1 [
    (stratumn.indigonode.cli.ext.field_desc) = "Hash of the file that was uploaded",
    (stratumn.indigonode.cli.ext.field_required) = true
  ];
}
